added new meals and updayted

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,7 @@
         //         "packageDir": "./"
         //     }
         // ]
-        "import/no-extraneous-dependencies": "off"
+        "import/no-extraneous-dependencies": "off",
+        "import/no-cycle": "off"
     }
 }
